proper-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules: 
  - host: a38aeb14bb08b4e63b05458300a43a4e-1656746426.ap-south-1.elb.amazonaws.com
    http:
      paths: 
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 80
        - path: /frontend
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
